--- a/index.html
+++ b/index.html
@@ -75,9 +75,6 @@
           <div class="presentacion">
             <p class="bienvenida">Bienvenidos</p>
             <h2>Soy <span>Francisco Crema</span>, Desarrollador Web</h2>
-            <p class="descripcion">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            </p>
             <a href="#portofolio">Ir a Portofolio</a>
           </div>
         </div>
@@ -94,12 +91,13 @@
         <div class="sobremi">
           <p class="titulo-seccion">Sobre mi</p>
           <h2>Hola soy, <span>Francisco Crema</span></h2>
-          <h3>Desarrollador Web</h3>
+          <h3>Desarrollador Web Front End</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
-            repellendus excepturi doloremque alias perferendis architecto.
+            Soy un chico Argentino, de la ciudad de <b>Rosario Santa FE</b> , a
+            la hora de trabajar soy muy delicado y detallista en todo. Me gusta
+            hacer paginas de todo tipo, pueden ver algunos de mis proyectos mas
+            abajo.
           </p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
           <a href="#">Descargar CV</a>
         </div>
       </section>
@@ -237,6 +235,16 @@
           </div>
           <div class="barra">
             <div id="bd" class=""></div>
+          </div>
+        </div>
+
+        <div class="skill">
+          <div class="info">
+            <p><span class="lista"></span>React Js</p>
+            <span class="porcentaje">75%</span>
+          </div>
+          <div class="barra">
+            <div id="rj" class=""></div>
           </div>
         </div>
 
