--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <!-- Seccion sobre mi -->
       <section id="sobremi">
         <div class="contenedor-foto">
-          <img src="img/img-perfil.jpeg" alt="" />
+          <img src="img/img-perfil2.jpeg" alt="" />
         </div>
 
         <div class="sobremi">
@@ -267,8 +267,8 @@
             <div class="overlay"></div>
             <img src="img/img1.jpg" alt="" />
             <div class="info">
-              <h4>Descripcion del Proyecto</h4>
-              <p>Diseño Web</p>
+              <h4>Lauvi</h4>
+              <p>Pagina de venta de frutas deshidratadas</p>
             </div>
           </div>
 
@@ -276,8 +276,8 @@
             <div class="overlay"></div>
             <img src="img/img2.jpg" alt="" />
             <div class="info">
-              <h4>Descripcion del Proyecto</h4>
-              <p>Diseño Web</p>
+              <h4>Matardos</h4>
+              <p>Pagina de venta de mates</p>
             </div>
           </div>
         </div>
